--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.5",
-        "munafio/chatify": "^1.4"
+        "munafio/chatify": "^1.4",
+        "rap2hpoutre/laravel-log-viewer": "^2.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
